--- a/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
@@ -2,26 +2,28 @@
     ViewData["Title"] = "Home Page";
 }
 
-@model List<Codecool.CodecoolShop.Models.Product>
+@model List<Product>
 
 <div class="container">
     @foreach (var element in Model)
     {
-        <div class="col-lg-3 col-lg-3" style="display: inline-block; max-width: 350px; height: 350px">
+        <div class="col-lg-3 col-lg-3" style="display: inline-block; height: 350px; max-width: 350px;">
             <div class="card">
-                <img src="img/@(element.Name).jpg" style="height: 50%; width: 50%; align-self: center; padding-top: 10px">
+                <img src="img/@(element.Name).jpg" style="align-self: center; height: 50%; padding-top: 10px; width: 50%;">
 
                 <div class="card-body">
                     <h5 class="card-title text-center">
                         Product
-                        @{ var num = Model.IndexOf(element) + 1;}
+                        @{ var num = Model.IndexOf(element) + 1; }
                         @num
                     </h5>
                     <h5 class="card-title">@element.Name</h5>
                     <p class="card-text">@element.Description.</p>
                     <p class="card-text">Category: @element.ProductCategory.Department</p>
                     <p class="card-text">Supplier: @element.Supplier.Name</p>
-                    <p class="card-text text-center"><strong>Price: @element.DefaultPrice.ToString("C2")</strong></p>
+                    <p class="card-text text-center">
+                        <strong>Price: @element.DefaultPrice.ToString("C2")</strong>
+                    </p>
                     @if (!element.IsInCart)
                     {
                         <a asp-action="Add" asp-route-id="@element.Id" type="button" class="btn btn-primary" style="float: bottom">Add To Cart</a>
