--- a/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
@@ -34,13 +34,13 @@
                     {
                         <div style="text-align: center">
                             <p class="card-text text-center">Quantity: @element.CartQuantity</p>
-                            <a asp-action="Add" asp-route-id="@element.Id" style="border-radius: 20px; color: black; font-size: 25px; width: 40px;">
+                            <a asp-action="Add" asp-route-id="@element.Id" style="border-radius: 20px; color: black; font-size: 25px; width: 40px;text-decoration: none;">
                                 <i class="bi bi-plus-circle"></i>
                             </a>
-                            <a asp-action="Minus" asp-route-id="@element.Id" style="border-radius: 20px; color: black; font-size: 25px; width: 40px;">
+                            <a asp-action="Minus" asp-route-id="@element.Id" style="border-radius: 20px; color: black; font-size: 25px; width: 40px;text-decoration: none;">
                                 <i class="bi bi-dash-circle"></i>
                             </a>
-                            <a asp-action="Delete" asp-route-id="@element.Id" style="border-radius: 20px; color: red; font-size: 25px; width: 40px;">
+                            <a asp-action="Delete" asp-route-id="@element.Id" style="border-radius: 20px; color: red; font-size: 25px; width: 40px;text-decoration: none;">
                                 <i class="bi bi-x-circle-fill"></i>
                             </a>
                         </div>
