--- a/src/Codecool.CodecoolShop/wwwroot/css/site.css
+++ b/src/Codecool.CodecoolShop/wwwroot/css/site.css
@@ -11,6 +11,10 @@ a.navbar-brand {
 
 a { color: #0366d6; }
 
+a:hover {
+    text-decoration: none;
+}
+
 .btn-primary {
     background-color: #1b6ec2;
     border-color: #1861ac;
