--- a/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
@@ -9,7 +9,7 @@
     {
         <div class="col-lg-3 col-lg-3" style="display: inline-block; height: 350px; max-width: 350px;">
             <div class="card">
-                <img src="img/@(element.Name).jpg" style="align-self: center; height: 50%; padding-top: 10px; width: 50%;">
+                <img src="~/img/@(element.Name).jpg" style="align-self: center; height: 50%; padding-top: 10px; width: 50%;">
 
                 <div class="card-body">
                     <h5 class="card-title text-center">
