--- a/src/Codecool.CodecoolShop/Views/Address/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Address/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] ="DUPA";
+    ViewData["Title"] ="Checkout";
 }
 @model Codecool.CodecoolShop.Models.Address
 <h1>Checkout - payment</h1>
