--- a/src/Codecool.CodecoolShop/Views/Address/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Address/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    ViewData["Title"] ="Checkout";
+    ViewData["Title"] = "Checkout";
 }
-@model Codecool.CodecoolShop.Models.Address
+@model Address
 <h1>Checkout - payment</h1>
 
 <p>This is your shopping cart checkout</p>
@@ -25,28 +25,3 @@
         <input type="submit"/>
     </form>
 </div>
-
-
-
-@* <div> *@
-@*     <form action="/" runat="server" id="userData"> *@
-@* *@
-@*         <label for="fullname">Enter name:</label><br> *@
-@*         <input id="fullname" type="text" name="fullname" placeholder="Jan Kowalski" size="30" required asp:TextBox runat="server"><br><br> *@
-@*         <label for="phone">Enter a phone number:</label><br> *@
-@* *@
-@*         <input type="tel" id="phone" name="phone" placeholder="123-452-678" size="11" pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}" required runat="server"><br><br> *@
-@*         <label for="email">Enter your email:</label><br> *@
-@*         <input type="email" id="email" pattern=".+@@.+.com" size="30" required placeholder="jan.kowalski@@gmail.com" runat="server"><br/><br/> *@
-@*         <label for="country">Country:</label><br> *@
-@*         <input id="country" name="country" placeholder="Poland" size="15" required runat="server"><br><br> *@
-@*         <label for="adress">Enter adress:</label><br> *@
-@*         <input id="adress" name="adress" placeholder="ul.Marcinkowskiego 12" required runat="server"><br><br> *@
-@*         <label for="city">Enter city:</label><br> *@
-@*         <input id="city" name="city" placeholder="Warszawa" size="15" required runat="server"><br><br> *@
-@*         <label for="zip">Enter zip-code:</label><br> *@
-@*         <input id="zip" name="postCode" pattern="[0-9]{2}-[0-9]{3}" placeholder="60-400" size="6" required runat="server"><br><br> *@
-@*         <input type="submit" value="Payment" asp-controller="adress" asp-action="index" class="btn btn-primary" runat="server"> *@
-@*         $1$ <a asp-action="product" asp-route-id="index" type="button" class="btn btn-primary">Payment</a> #1# *@
-@*     </form> *@
-@* </div> *@
