--- a/src/Codecool.CodecoolShop/Views/Payment/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Payment/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    ViewData["Title"] ="Payment";
+    ViewData["Title"] = "Payment";
 }
-@model Codecool.CodecoolShop.Models.PaymentInfo;
+@model PaymentInfo;
 
 
 <p>This is your payment checkout</p>
@@ -13,14 +13,14 @@
 
 <div>
     <form asp-action="Index" asp-controller="Payment">
-    <label asp-for="NameOnCard"></label>
+        <label asp-for="NameOnCard"></label>
         <input type="text" asp-for="NameOnCard" placeholder="Name on Card"/>
         <label asp-for="CardNumber"></label>
         <input type="text" asp-for="CardNumber" placeholder="Card Number">
         <label asp-for="ExpMonth"></label>
-        <input type="text" asp-for="ExpMonth" placeholder="Expire Month">
+        <input type="text" asp-for="ExpMonth" placeholder="Expiry Month">
         <label asp-for="ExpYear"></label>
-        <input type="text" asp-for="ExpYear" placeholder="Expire Year">
+        <input type="text" asp-for="ExpYear" placeholder="Expiry Year">
         <label asp-for="CVV"></label>
         <input type="text" asp-for="CVV" placeholder="CVV">
         <input type="submit"/>
