--- a/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
@@ -21,10 +21,10 @@
                     <p class="card-text">@element.Description.</p>
                     <p class="card-text">
                         <a asp-action="SortByCategory" asp-route-id=@element.ProductCategory.Id>Category: @element.ProductCategory.Department</a>
-                        </p>
+                    </p>
                     <p class="card-text">
                         <a asp-action="SortBySupplier" asp-route-id=@element.Supplier.Id>Supplier: @element.Supplier.Name</a>
-                        </p>
+                    </p>
                     <p class="card-text text-center">
                         <strong>Price: @element.DefaultPrice.ToString("C2")</strong>
                     </p>
@@ -38,13 +38,13 @@
                     {
                         <div style="text-align: center">
                             <p class="card-text text-center">Quantity: @element.CartQuantity</p>
-                            <a asp-action="Add" asp-route-id="@element.Id" style="border-radius: 20px; color: black; font-size: 25px; width: 40px;text-decoration: none;">
+                            <a asp-action="Add" asp-route-id="@element.Id" style="border-radius: 20px; color: black; font-size: 25px; text-decoration: none; width: 40px;">
                                 <i class="bi bi-plus-circle"></i>
                             </a>
-                            <a asp-action="Minus" asp-route-id="@element.Id" style="border-radius: 20px; color: black; font-size: 25px; width: 40px;text-decoration: none;">
+                            <a asp-action="Minus" asp-route-id="@element.Id" style="border-radius: 20px; color: black; font-size: 25px; text-decoration: none; width: 40px;">
                                 <i class="bi bi-dash-circle"></i>
                             </a>
-                            <a asp-action="Delete" asp-route-id="@element.Id" style="border-radius: 20px; color: red; font-size: 25px; width: 40px;text-decoration: none;">
+                            <a asp-action="Delete" asp-route-id="@element.Id" style="border-radius: 20px; color: red; font-size: 25px; text-decoration: none; width: 40px;">
                                 <i class="bi bi-x-circle-fill"></i>
                             </a>
                         </div>
