--- a/src/Codecool.CodecoolShop/wwwroot/css/site.css
+++ b/src/Codecool.CodecoolShop/wwwroot/css/site.css
@@ -11,9 +11,7 @@ a.navbar-brand {
 
 a { color: #0366d6; }
 
-a:hover {
-    text-decoration: none;
-}
+a:hover { text-decoration: none; }
 
 .btn-primary {
     background-color: #1b6ec2;
