--- a/src/Codecool.CodecoolShop/Views/OrderConfirmation/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/OrderConfirmation/Index.cshtml
@@ -1,32 +1,36 @@
 ﻿@model Order;
 
 @{
-    ViewData["Title"] = "Your order confirmation";
+    ViewData["Title"] = "Order confirmation";
 }
-<h1>Order summary</h1>
+<h1>Order Summary</h1>
 <div>
     @foreach (var element in Model.Cart.Products)
     {
-        <p>@element.Key.Name x @element.Value : @element.Key.DefaultPrice</p>
-        <br/>
+        <p>Product: @element.Key.Name</p>
+        <img src="~/img/@(element.Key.Name).jpg" style="height: 150px; width: 150px;">
+        <p>Quantity: @element.Value</p>
+        <p>Price: @(element.Key.DefaultPrice * element.Value)</p>
         <br/>
     }
     <h5>Your shipping details</h5>
-    <p>Full name: @Model.Address.FullName</p>
-    <p>Street: @Model.Address.Street</p>
+    <p>Full Name: @Model.Address.FullName</p>
+    <p>Email: @Model.Address.Email</p>
+    <p>Phone: @Model.Address.Phone</p>
     <p>Country: @Model.Address.Country</p>
     <p>City: @Model.Address.City</p>
-    <p>Phone: @Model.Address.Phone</p>
-    <p>Email: @Model.Address.Email</p>
-    <p>Zip code:@Model.Address.Zip</p>
+    <p>Street: @Model.Address.Street</p>
+    <p>Zip code: @Model.Address.Zip</p>
+
+    <br/>
 
     <h5>Your Payment info</h5>
-    <p>@Model.PaymentInfo.CardNumber</p>
-    <p>@Model.PaymentInfo.ExpMonth</p>
-    <p>@Model.PaymentInfo.ExpYear</p>
-    <p>@Model.PaymentInfo.NameOnCard</p>
-    <p>@Model.PaymentInfo.CVV</p>
+    <p>Name on Card: @Model.PaymentInfo.NameOnCard</p>
+    <p>Card Number: @Model.PaymentInfo.CardNumber</p>
+    <p>Expiry Month: @Model.PaymentInfo.ExpMonth</p>
+    <p>Expiry Year: @Model.PaymentInfo.ExpYear</p>
+    <p>CVV: @Model.PaymentInfo.CVV</p>
 </div>
 <div>
-    <button type="submit">Confirm</button>
+    <button type="submit">Confirm order</button>
 </div>
