--- a/src/Codecool.CodecoolShop/Views/Payment/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Payment/Index.cshtml
@@ -3,26 +3,30 @@
 }
 @model PaymentInfo;
 
+<h5>This is your payment checkout.</h5>
 
-<p>This is your payment checkout</p>
-
-<label for="fname">Accepted Cards</label>
+<label for="fname">Accepted Cards:</label>
 <div>
-    <img src="~/img/creditcards.png" width="200"/>
+    <img src="~/img/creditcards.png" width="300"/>
 </div>
 
 <div>
     <form asp-action="Index" asp-controller="Payment">
         <label asp-for="NameOnCard"></label>
         <input type="text" asp-for="NameOnCard" placeholder="Name on Card"/>
+        <br/>
         <label asp-for="CardNumber"></label>
         <input type="text" asp-for="CardNumber" placeholder="Card Number">
+        <br/>
         <label asp-for="ExpMonth"></label>
         <input type="text" asp-for="ExpMonth" placeholder="Expiry Month">
+        <br/>
         <label asp-for="ExpYear"></label>
         <input type="text" asp-for="ExpYear" placeholder="Expiry Year">
+        <br/>
         <label asp-for="CVV"></label>
         <input type="text" asp-for="CVV" placeholder="CVV">
-        <input type="submit"/>
+        <br/>
+        <input type="submit" value="Pay for your order"/>
     </form>
 </div>
