--- a/src/Codecool.CodecoolShop/Views/OrderConfirmation/Confirmation.cshtml
+++ b/src/Codecool.CodecoolShop/Views/OrderConfirmation/Confirmation.cshtml
@@ -1,5 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Order Confirmation";
 }
 
-<h1>Your order summary was sent to your email!</h1>
+<h1>Thank you for shopping in our Codecool Shop!</h1>
+<h3>Summary of your order was sent to your email!</h3>
+<h5>Please come back! See you next time!</h5>
