--- a/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
@@ -19,12 +19,12 @@
                     <h5 class="card-title">@element.Name</h5>
                     <p class="card-text">@element.Description.</p>
                     <p class="card-text">
-                        <a asp-action="SortByCategory" asp-route-id=@element.ProductCategory.Id>Category: @element.ProductCategory.Department</a>
+                        <a asp-action="SortByCategory" asp-route-id=@element.ProductCategory.Id>Category: @element.ProductCategory.Name</a>
                     </p>
                     <p class="card-text">
                         <a asp-action="SortBySupplier" asp-route-id=@element.Supplier.Id>Supplier: @element.Supplier.Name</a>
                     </p>
-                    <p class="card-text text-center">
+                    <p class="card-text text-center"> 
                         <strong>Price: @element.DefaultPrice.ToString("C2")</strong>
                     </p>
                     @if (!element.IsInCart)
