--- a/src/Codecool.CodecoolShop/Views/Payment/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Payment/Index.cshtml
@@ -18,13 +18,13 @@
         <input type="text" asp-for="NameOnCard" required pattern="^[a-zA-Z]{3,}(?: [a-zA-Z]+){0,2}$" placeholder="Jan Kowalski"/>
         <br/>
         <label asp-for="CardNumber"></label>
-        <input type="text" asp-for="CardNumber" required pattern="[0-9]{4}-[0-9]{4}-[0-9]{4}-[0-9]{4}" placeholder="1111-2222-3333-4444">
+        <input type="text" asp-for="CardNumber" required pattern="[0-9]{16}" placeholder="1111222233334444">
         <br/>
         <label asp-for="ExpMonth"></label>
         <input type="text" asp-for="ExpMonth" required pattern="[0-9]{2}" placeholder="06">
         <br/>
         <label asp-for="ExpYear"></label>
-        <input type="text" asp-for="ExpYear" required pattern="[0-9]{4}" placeholder="2022">
+        <input type="text" asp-for="ExpYear" required pattern="[0-9]{2}" placeholder="22">
         <br/>
         <label asp-for="CVV"></label>
         <input type="text" asp-for="CVV" required pattern="[0-9]{3}" placeholder="123">
