--- a/src/Codecool.CodecoolShop/Views/Address/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Address/Index.cshtml
@@ -10,25 +10,25 @@
 <div>
     <form asp-action="Index" asp-controller="Address">
         <label asp-for="Street"></label><br/>
-        <input type="text" asp-for="Street" size="11" class="text-danger" placeholder="Street" required/>
+        <input type="text" asp-for="Street" size="11" class="text-danger" placeholder="Street" maxlength="35" required/>
         <br/>
         <label asp-for="City"></label><br/>
-        <input type="text" asp-for="City" size="11" class="text-danger" placeholder="City" required/>
+        <input type="text" asp-for="City" size="11" class="text-danger" placeholder="City" maxlength="30" required/>
         <br/>
         <label asp-for="Country"></label><br/>
-        <input type="text" asp-for="Country" size="11" class="text-danger" placeholder="Country" required/>
+        <input type="text" asp-for="Country" size="11" class="text-danger" placeholder="Country" maxlength="30" required/>
         <br/>
         <label asp-for="FullName"></label><br/>
-        <input type="text" asp-for="FullName" class="text-danger" placeholder="Full name" required/>
+        <input type="text" asp-for="FullName" class="text-danger" placeholder="Full name" maxlength="35" required/>
         <br/>
         <label asp-for="Email"></label><br/>
-        <input type="text" asp-for="Email" size="11" class="text-danger" placeholder="jan.kowalski@@gmail.com" required pattern=".+@@.+.com" required/>
+        <input type="text" asp-for="Email" size="11" class="text-danger" placeholder="jan.kowalski@@gmail.com" maxlength="30" required pattern=".+@@.+.com" required/>
         <br/>
         <label asp-for="Phone"></label><br/>
-        <input type="tel" asp-for="Phone" size="11" class="text-danger" pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}" placeholder="123-452-678" required/>
+        <input type="tel" asp-for="Phone" size="11" class="text-danger" pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}" maxlength="11" placeholder="123-452-678" required/>
         <br/>
         <label asp-for="Zip"></label><br/>
-        <input type="text" asp-for="Zip" size="6" class="text-danger" pattern="[0-9]{2}-[0-9]{3}" placeholder="60-400" required/>
+        <input type="text" asp-for="Zip" size="6" class="text-danger" pattern="[0-9]{2}-[0-9]{3}" maxlength="6" placeholder="60-400" required/>
         <br/><br/>
         <input type="submit" class="btn btn-primary" value="Payment"/>
     </form>
