--- a/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
@@ -28,6 +28,12 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Privacy">Privacy</a>
                     </li>
+                    <li class="nav-item" style="position:relative; left: 64%">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Login</a>
+                    </li>
+                    <li class="nav-item" style="position:relative; left: 64%">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Register</a>
+                    </li>
                 </ul>
             </div>
         </div>
