--- a/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Login</a>
                     </li>
                     <li class="nav-item" style="position:relative; left: 64%">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Register</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Sign Up</a>
                     </li>
                 </ul>
             </div>
