--- a/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
@@ -28,11 +28,11 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Privacy">Privacy</a>
                     </li>
-                    <li class="nav-item" style="position:relative; left: 64%">
+                    <li class="nav-item" style="left: 64%; position: relative;">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Login</a>
                     </li>
-                    <li class="nav-item" style="position:relative; left: 64%">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Sign Up</a>
+                    <li class="nav-item" style="left: 64%; position: relative;">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="SignUp" asp-action="Index">SignUp</a>
                     </li>
                 </ul>
             </div>
