--- a/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
@@ -1,11 +1,12 @@
 @{
     ViewData["Title"] = "Home Page";
 }
-
-@model List<Domain.Product>
+@using Product = Domain.Product;
+@using OrderedProduct = Domain.OrderedProduct;
+@model Codecool.CodecoolShop.Controllers.ModelContainer
 
 <div class="container">
-    @foreach (var element in Model)
+    @foreach (Product element in Model.products)
     {
         <div class="col-lg-3 col-lg-3" style="display: inline-block; height: 550px; max-width: 350px;">
             <div class="card">
@@ -13,7 +14,7 @@
                 <div class="card-body">
                     <h5 class="card-title text-center">
                         Product
-                        @{ var num = Model.IndexOf(element) + 1; }
+                        @{ var num = Model.products.IndexOf(element) + 1; }
                         @num
                     </h5>
                     <h5 class="card-title">@element.Name</h5>
@@ -27,16 +28,18 @@
                     <p class="card-text text-center">
                         <strong>Price: @element.DefaultPrice @element.Currency</strong>
                     </p>
-                    @*@if (!element.IsInCart)
-                    {*@
+                    @if (!Model.OrderedProducts.Any(p => p.ProductId == element.Id))
+                    {
                         <div style="text-align: center">
                             <a asp-action="Add" asp-route-id="@element.Id" type="button" class="btn btn-primary" style="float: bottom">Add To Cart</a>
                         </div>
-                    @*}
-                    @if (element.IsInCart)
+                    }
+                    @if (Model.OrderedProducts.Any(p => p.ProductId == element.Id))
                     {
                         <div style="text-align: center">
-                            <p class="card-text text-center">Quantity: @element.CartQuantity</p>
+                            <p class="card-text text-center">Quantity: 
+                                @Model.OrderedProducts.Where(p => p.ProductId == @element.Id).Select(p => p.Quantity).First()
+                                </p>
                             <a asp-action="Add" asp-route-id="@element.Id" style="border-radius: 20px; color: black; font-size: 25px; text-decoration: none; width: 40px;">
                                 <i class="bi bi-plus-circle"></i>
                             </a>
@@ -47,7 +50,7 @@
                                 <i class="bi bi-x-circle-fill"></i>
                             </a>
                         </div>
-                    }*@
+                    }
                 </div>
             </div>
         </div>
