--- a/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
@@ -1,12 +1,10 @@
 @{
     ViewData["Title"] = "Home Page";
 }
-@using Product = Domain.Product;
-@using OrderedProduct = Domain.OrderedProduct;
 @model Codecool.CodecoolShop.Controllers.ModelContainer
 
 <div class="container">
-    @foreach (Product element in Model.products)
+    @foreach (var element in Model.products)
     {
         <div class="col-lg-3 col-lg-3" style="display: inline-block; height: 550px; max-width: 350px;">
             <div class="card">
@@ -37,9 +35,10 @@
                     @if (Model.OrderedProducts.Any(p => p.ProductId == element.Id))
                     {
                         <div style="text-align: center">
-                            <p class="card-text text-center">Quantity: 
-                                @Model.OrderedProducts.Where(p => p.ProductId == @element.Id).Select(p => p.Quantity).First()
-                                </p>
+                            <p class="card-text text-center">
+                                Quantity:
+                                @Model.OrderedProducts.Where(p => p.ProductId == element.Id).Select(p => p.Quantity).First()
+                            </p>
                             <a asp-action="Add" asp-route-id="@element.Id" style="border-radius: 20px; color: black; font-size: 25px; text-decoration: none; width: 40px;">
                                 <i class="bi bi-plus-circle"></i>
                             </a>
