--- a/src/Codecool.CodecoolShop/Views/SignUp/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/SignUp/Index.cshtml
@@ -8,7 +8,7 @@
 <p>Provide your personal information:</p>
 
 <div>
-    <form asp-action="Index" asp-controller="SignUp">
+    <form asp-action="SignUp" asp-controller="SignUp">
         <label asp-for="FullName"></label>
         <input type="text" asp-for="FullName" required pattern="^[a-zA-Z]{3,}(?: [a-zA-Z]+){0,2}$" placeholder="Jan Kowalski"/>
         <br/>
@@ -17,6 +17,9 @@
         <br/>
         <label asp-for="Password"></label>
         <input type="text" asp-for="Password" type="password">
+        <br/>
+        <label asp-for="ConfirmPassword"></label>
+        <input type="text" asp-for="ConfirmPassword" type="password">
         <br/>
         <br/>
         <input type="submit" class="btn btn-primary" value="SignUp"/>
