--- a/src/Codecool.CodecoolShop/Views/Cart/OrderHistory.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Cart/OrderHistory.cshtml
@@ -14,40 +14,36 @@
     {
         @foreach (var order in Model.order)
         {
-            <span>@order.Address.FullName</span>
-            @foreach (var element in Model.products)
-            {
-                <div style="display: flex;">
-                    <img src="/img/@(element.Name).jpg" style="height: 50px; margin-top: 15px; width: 50px;">
-
-                    <div style="height: 40px; margin-top: 20px; padding-left: 20px;">
-                        <a asp-action="Add" asp-route-id="@element.ProductId" style="border-radius: 20px; color: black; font-size: 25px; text-decoration: none; width: 40px;">
-                            <i class="bi bi-plus-circle"></i>
-                        </a>
-                        <a asp-action="Minus" asp-route-id="@element.ProductId" style="border-radius: 20px; color: black; font-size: 25px; text-decoration: none; width: 40px;">
-                            <i class="bi bi-dash-circle"></i>
-                        </a>
-                        <a asp-action="Delete" asp-route-id="@element.ProductId" style="border-radius: 20px; color: red; font-size: 25px; text-decoration: none; width: 40px;">
-                            <i class="bi bi-x-circle-fill"></i>
-                        </a>
-                    </div>
-
-                    <div style="padding-left: 20px;">
-                        <p>@element.Name</p>
-                        <p style="margin-top: -15px;">Price: @element.Price @element.Currency</p>
-                        <p style="margin-top: -15px;">Quantity: @element.Quantity</p>
-                    </div>
-                </div>
+            <div style="border: 1px solid gray; padding: 10px;">
+                <p>Order @order.Id</p>
+                <p>Biling Info</p>
+                <p>@order.Address.FullName</p>
+                <p>@order.Address.Email</p>
+                <p>@order.Address.Phone</p>
+                <p>@order.Address.Street</p>
+                <p>@order.Address.City @order.Address.Zip</p>
+                <p>@order.Address.Country</p>
                 <hr/>
-            }
-            <div>
-                <b>Total products:</b> @Model.products.Sum(p => p.Quantity)
-                <br/>
-                <b>Total price:</b> @Model.products.Sum(p => p.Quantity * p.Price) @Model.products[0].Currency
-                <br/>
-                <a asp-action="Index" asp-controller="Address" type="button" class="btn btn-primary">Go to checkout</a>
+                @foreach (var element in Model.products)
+                {
+                    <div style="display: flex;">
+                        <img src="/img/@(element.Name).jpg" style="height: 50px; margin-top: 15px; width: 50px;">
+
+                        <div style="padding-left: 20px;">
+                            <p>@element.Name</p>
+                            <p style="margin-top: -15px;">Price: @element.Price @element.Currency</p>
+                            <p style="margin-top: -15px;">Quantity: @element.Quantity</p>
+                        </div>
+                    </div>
+                    <hr/>
+                }
+                <div>
+                    <b>Total products:</b> @Model.products.Sum(p => p.Quantity)
+                    <br/>
+                    <b>Total price:</b> @Model.products.Sum(p => p.Quantity * p.Price) @Model.products[0].Currency
+                    <br/>
+                </div>
             </div>
-            <hr/>
         }
     }
 </div>
