--- a/src/Codecool.CodecoolShop/Views/Address/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Address/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Checkout";
 }
-@model Address
+@model Domain.Address
 <h4>Checkout - personal data and address</h4>
 
 <p>Provide your data:</p>
