--- a/src/Codecool.CodecoolShop/Views/Payment/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Payment/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Payment";
 }
-@model PaymentInfo;
+@model Domain.PaymentInfo;
 
 <h4>Choose form of payment:</h4>
 <p style="display: inline">Payment only by card!</p>
