--- a/src/Codecool.CodecoolShop/Views/Cart/OrderHistory.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Cart/OrderHistory.cshtml
@@ -14,7 +14,7 @@
     {
         @foreach (var order in Model.order)
         {
-            <div style="border: 1px solid gray; padding: 10px;margin-bottom: 20px">
+            <div style="border: 1px solid gray; margin-bottom: 20px; padding: 10px;">
                 <p>Order @order.Id</p>
                 <p>Biling Info</p>
                 <p>@order.Address.FullName</p>
