--- a/src/Codecool.CodecoolShop/Views/Shared/_LoginPartial.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using Codecool.CodecoolShop.Areas.Identity.Data
+@using System.Security.Claims
 
 @inject SignInManager<CodecoolCodecoolShopUser> SignInManager
 @inject UserManager<CodecoolCodecoolShopUser> UserManager
