--- a/src/Codecool.CodecoolShop/Views/Shared/_LoginPartial.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
-﻿@using Codecool.CodecoolShop.Areas.Identity.Data
-@using Codecool.CodecoolShop.Areas.Identity.Extension
+﻿@using Codecool.CodecoolShop.Areas.Identity.Extension
+@using Codecool.CodecoolShop.Areas.Identity.Data
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<CodecoolCodecoolShopUser> SignInManager
 @inject UserManager<CodecoolCodecoolShopUser> UserManager
