--- a/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
@@ -1,6 +1,5 @@
-﻿@using Microsoft.AspNetCore.Identity
-@using Codecool.CodecoolShop.Areas.Identity.Data
-
+﻿@using Codecool.CodecoolShop.Areas.Identity.Data
+@using Microsoft.AspNetCore.Identity
 @inject SignInManager<CodecoolCodecoolShopUser> SignInManager
 @inject UserManager<CodecoolCodecoolShopUser> UserManager
 
